@@ -1,6 +1,7 @@
 2011-04-28  Bernhard Walle <bernhard@bwalle.de>
 
 	* stringutil: Convert boolean values to "false"/"true".
+	* Add 'apidoc' and 'tags' target to CMake.
 
 2011-04-27  Bernhard Walle <bernhard@bwalle.de>
 
